--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.2",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
@@ -35,7 +37,8 @@
     "sanity": "^3.30.1",
     "sharp": "^0.33.2",
     "styled-components": "^6.1.8",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
