--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@portabletext/react": "^3.0.11",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.15.3",
     "@sanity/code-input": "^4.1.3",
     "@sanity/image-url": "^1.0.2",
@@ -22,6 +23,7 @@
     "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.2",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
@@ -34,6 +36,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-portable-text": "^0.6.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sanity": "^3.30.1",
     "sharp": "^0.33.2",
     "styled-components": "^6.1.8",
