--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
+    "geist": "^1.2.2",
     "hamburger-react": "^2.5.0",
     "next": "14.1.0",
     "next-sanity": "^7.1.4",
