--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.6",
     "geist": "^1.2.2",
     "hamburger-react": "^2.5.0",
