--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-kit": "^5.0.31",
     "@sanity/react-loader": "^1.9.3",
+    "@sanity/table": "^1.1.2",
     "@sanity/vision": "^3.30.1",
     "@sanity/visual-editing": "^1.7.0",
     "@tabler/icons-react": "^2.47.0",
@@ -28,6 +29,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-class-names": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.6",
     "geist": "^1.2.2",
