--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-class-names": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.6",
