--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-portable-text": "^0.6.0",
     "react-syntax-highlighter": "^15.5.0",
     "sanity": "^3.30.1",
+    "sanity-plugin-milkdown": "^1.0.0",
     "sharp": "^0.33.2",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
