--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.15",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.15.7",
@@ -20,6 +21,9 @@
     "@sanity/table": "^1.1.2",
     "@sanity/vision": "^3.30.1",
     "@sanity/visual-editing": "^1.7.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.3",
     "@tabler/icons-react": "^2.47.0",
     "@tsparticles/engine": "^3.2.2",
     "@tsparticles/react": "^3.0.0",
@@ -32,12 +36,14 @@
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-class-names": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "esbuild": "^0.23.1",
     "framer-motion": "^11.0.6",
     "geist": "^1.2.2",
     "hamburger-react": "^2.5.0",
     "next": "14.1.0",
     "next-sanity": "^7.1.4",
     "next-themes": "^0.2.1",
+    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
     "react-portable-text": "^0.6.0",
