--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-portable-text": "^0.6.0",
     "react-syntax-highlighter": "^15.5.0",
     "sanity": "^3.30.1",
+    "sanity-plugin-asset-source-unsplash": "^3.0.1",
+    "sanity-plugin-latex-input": "^2.0.4",
     "sanity-plugin-milkdown": "^1.0.0",
     "sharp": "^0.33.2",
     "styled-components": "^6.1.8",
